--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en-ca">
   <head>
     <meta charset="utf-8"
-    <meta name="description" content="My first webpage, with CSS">
+    <meta name="description" content="My first webpage, with MDL">
     <meta name="keywords" content="mths, ics2o">
     <meta name="author" content="Kenny Le">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
