Added text to index2.html

--- a/index2.html
+++ b/index2.html
@@ -40,5 +40,6 @@
     <!-- Default Slider -->
     <input class="mdl-slider mdl-js-slider" type="range"
     min="0" max="100" value="0" tabindex="0">
+    <p>Drag the slider</p>
   </body>
 </html>
